<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.shifts.fragment.SortLeftFragment"
    android:orientation="vertical"
    android:background="@color/screen_background">


    <com.mylocumchoice.MyLocumChoicePharmacy.utils.LockableScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <View
        android:id="@+id/shadow"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_height="@dimen/text_shadow_top_height"
        android:background="@drawable/top_shadow_gradient"/>

    <LinearLayout
        android:layout_below="@+id/space1"
        android:id="@+id/ll_Newest"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="@color/white">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center_vertical"
            android:text="@string/text_newest"
            android:layout_marginLeft="@dimen/_15sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/text_details"/>

        <ImageView
            android:id="@+id/tg_New"
            android:layout_width="@dimen/_16sdp"
            android:layout_height="@dimen/_16sdp"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/_15sdp"
            android:background="@drawable/check"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textOff=""
            android:textOn="" />

    </LinearLayout>

    <View
        android:id="@+id/shadow2"
        android:layout_below="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_shadow_bottom_height"
        android:background="@drawable/bottom_shadow_gradient"/>

    <TextView
        android:id="@+id/space2"
        android:layout_below="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/grey"
        android:textSize="@dimen/text_details_small"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:text="@string/text_hourly"
        android:background="@color/screen_background"/>

    <View
        android:id="@+id/shadow3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_shadow_top_height"
        android:background="@drawable/top_shadow_gradient"/>

    <LinearLayout
        android:id="@+id/llHighest"
        android:layout_below="@id/space2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:orientation="horizontal"
        android:text="@string/text_highest"
        android:gravity="center_vertical"
        android:background="@color/white">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/text_highest"
            android:layout_marginLeft="@dimen/_15sdp"
            android:textSize="@dimen/text_details"
            android:textColor="@color/black" />

        <ImageView
            android:id="@+id/tg_High"
            android:layout_width="@dimen/_16sdp"
            android:layout_height="@dimen/_16sdp"
            android:background="@drawable/check"
            android:textOn=""
            android:textOff=""
            android:focusable="false"
            android:layout_marginRight="@dimen/_15sdp"
            android:focusableInTouchMode="false"
            android:layout_centerVertical="true"/>

    </LinearLayout>
    <View
        android:id="@+id/shadow4"
        android:layout_below="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_shadow_bottom_height"
        android:background="@drawable/bottom_shadow_gradient"/>

    <TextView
        android:id="@+id/tv_Dist"
        android:layout_below="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/grey"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:textSize="@dimen/text_details_small"
        android:text="@string/text_distance"
        android:background="@color/screen_background"/>

    <View
        android:id="@+id/shadow5"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_shadow_top_height"
        android:background="@drawable/top_shadow_gradient"/>

    <LinearLayout
        android:id="@+id/ll_Least"
        android:layout_below="@id/shadow5"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/white">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/text_least"
            android:layout_marginLeft="@dimen/_15sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/text_details" />

        <ImageView
            android:id="@+id/tg_Least"
            android:layout_width="@dimen/_16sdp"
            android:layout_height="@dimen/_16sdp"
            android:background="@drawable/check"
            android:textOn=""
            android:textOff=""
            android:focusable="false"
            android:layout_marginRight="@dimen/_15sdp"
            android:focusableInTouchMode="false"
            android:layout_centerVertical="true"/>

    </LinearLayout>

    <View
        android:id="@+id/shadow6"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_shadow_bottom_height"
        android:background="@drawable/bottom_shadow_gradient"/>

    <TextView
        android:id="@+id/space4"
        android:layout_below="@id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_15sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:textSize="@dimen/text_details_small"
        android:textColor="@color/grey"
        android:text="@string/text_date"
        android:background="@color/screen_background"/>

    <View
        android:id="@+id/shadow7"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_shadow_top_height"
        android:background="@drawable/top_shadow_gradient"/>

    <LinearLayout
        android:id="@+id/ll_Asc"
        android:layout_below="@+id/space4"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@drawable/drawable_shadow_down">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.9"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/text_asc"
            android:textSize="@dimen/text_details"
            android:layout_marginLeft="@dimen/_15sdp"
            android:textColor="@color/black" />

        <ImageView
            android:id="@+id/tg_asc"
            android:layout_width="@dimen/_16sdp"
            android:layout_height="@dimen/_16sdp"
            android:background="@drawable/check"
            android:textOn=""
            android:textOff=""
            android:focusable="false"
            android:layout_marginRight="@dimen/_15sdp"
            android:focusableInTouchMode="false"
            android:layout_centerVertical="true"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_Desc"
        android:layout_below="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@color/white">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.9"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:text="@string/text_desc"
            android:textSize="@dimen/text_details"
            android:layout_marginLeft="@dimen/_15sdp"/>

        <ImageView
            android:id="@+id/tg_desc"
            android:layout_width="@dimen/_16sdp"
            android:layout_height="@dimen/_16sdp"
            android:background="@drawable/check"
            android:textOn=""
            android:textOff=""
            android:focusable="false"
            android:layout_marginRight="@dimen/_15sdp"
            android:focusableInTouchMode="false"
            android:layout_centerVertical="true"/>

    </LinearLayout>

    <View
        android:id="@+id/shadow8"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_shadow_bottom_height"
        android:background="@drawable/bottom_shadow_gradient"/>
        </LinearLayout>
    </com.mylocumchoice.MyLocumChoicePharmacy.utils.LockableScrollView>
</RelativeLayout>