<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/_5sdp"
    tools:context=".view.bookings.fragment.BookFragOne">

    <LinearLayout
        android:id="@+id/priceLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_10sdp">

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="£ 1584.00"
            android:textSize="@dimen/_20sdp"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_price_lab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_earned"
            android:textSize="@dimen/text_details"
            android:textColor="@color/white"/>

    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/priceLayout"
        android:id="@+id/bookingLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_20sdp">

        <LinearLayout
            android:id="@+id/paidLayout"
            android:layout_width="0dp"
            android:layout_weight="0.4"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_paid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="12"
                android:textSize="@dimen/text_details"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_paid_lab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/text_paid_booking"
                android:textSize="@dimen/text_details"
                android:textColor="@color/white"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.005">

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/white" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/unPaidLayout"
            android:layout_width="0dp"
            android:layout_weight="0.4"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_unpaid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="20"
                android:textSize="@dimen/text_details"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_unpaid_lab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/text_unPaid_booking"
                android:textSize="@dimen/text_details"
                android:textColor="@color/white"/>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>